[project]
name = "point24"
version = "0.1.1"
description = "calculate 24 with four numbers with braces, add, sub, mul and div."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pip_pkg_info"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
